--- a/html/contact.html
+++ b/html/contact.html
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="d-flex column-gap-2">
+            <div class="d-flex div-icons column-gap-2">
               <div class="icon-bg"><i class="fa-brands fa-facebook-f"></i></div>
               <div class="icon-bg"><i class="fa-brands fa-twitter"></i></div>
               <div class="icon-bg">
